--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "vitest": "^0.29.8"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.24.0"
   }
 }
