añadiendo validaciones de campos

--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "vitest": "^0.29.8"
   },
   "dependencies": {
+    "@types/validator": "^13.12.0",
     "axios": "^1.7.2",
     "express": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "validator": "^13.12.0"
   }
 }
